clusters/production/argocd/resources/vault/ingressroute-tcp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: vault
  namespace: vault
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`vault.k8s.tss.local`)
      services:
        - name: vault-active
          port: 8200
  tls:
    passthrough: true
